# ohtu-miniprojekti

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  codecov.yml  joku.bib  log.html  loppuraportti.md  output.xml  pyproject.toml  report.html  retro.md  testi.bib  testitiedosto.bib  tiedosto_ilman_paatetta.bib
.github/workflows/: main.yml
esimkansio/: kansioon.bib
src/: KomentolukijaLibrary.py  ViiteLibrary.py  console_io.py  index.py  komentolukija.py  testitiedosto.bib  viite_editori.py  viite_parseri.py  viite_valitsin.py
src/tests/: avaa_bib_tiedosto.robot  help_komento_tulostaa_oikein.robot  kehote_tulostaa_oikein.robot  lisaa_tai_poista_tagi.robot  luo_bib_tiedosto.robot  luo_tai_avaa_bib_tiedosto.robot  muokkaa_viitetta.robot  resource.robot  testi.robot  viite_editori_test.py  viite_parseri_test.py  viite_valitsin_test.py
