[tool.poetry]
name = "miniprojekti"
version = "0.1.0"
description = ""
authors = ["Olli-Antti","Lauri","Lasse","Eetu","Elias","Harri"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.8"
pylint = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
